src/test/ui/parser/default-on-wrong-item-kind.stderr
error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:9:5
   |
LL |     default extern crate foo;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:10:5
   |
LL |     default use foo;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:11:5
   |
LL |     default static foo: u8;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:12:5
   |
LL |     default const foo: u8;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:13:5
   |
LL |     default fn foo();
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:14:5
   |
LL |     default mod foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:15:5
   |
LL |     default extern "C" {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:16:5
   |
LL |     default type foo = u8;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:17:5
   |
LL |     default enum foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:18:5
   |
LL |     default struct foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:19:5
   |
LL |     default union foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:20:5
   |
LL |     default trait foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:21:5
   |
LL |     default trait foo = Ord;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:25:5
   |
LL |     default default!();
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:26:5
   |
LL |     default default::foo::bar!();
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:27:5
   |
LL |     default macro foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:28:5
   |
LL |     default macro_rules! foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:33:5
   |
LL |     default extern crate foo;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:33:5
   |
LL |     default extern crate foo;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:35:5
   |
LL |     default use foo;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:35:5
   |
LL |     default use foo;
   |     ^^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:37:5
   |
LL |     default static foo: u8;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:38:5
   |
LL |     default const foo: u8;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: extern items cannot be `const`
  --> $DIR/default-on-wrong-item-kind.rs:38:19
   |
LL |     default const foo: u8;
   |     --------------^^^
   |     |
   |     help: try using a static value: `static`
   |
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:40:5
   |
LL |     default fn foo();
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:41:5
   |
LL |     default mod foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:41:5
   |
LL |     default mod foo {}
   |     ^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:43:5
   |
LL |     default extern "C" {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:43:5
   |
LL |     default extern "C" {}
   |     ^^^^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:45:5
   |
LL |     default type foo = u8;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:46:5
   |
LL |     default enum foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:46:5
   |
LL |     default enum foo {}
   |     ^^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:48:5
   |
LL |     default struct foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:48:5
   |
LL |     default struct foo {}
   |     ^^^^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:50:5
   |
LL |     default union foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:50:5
   |
LL |     default union foo {}
   |     ^^^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:52:5
   |
LL |     default trait foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:52:5
   |
LL |     default trait foo {}
   |     ^^^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:54:5
   |
LL |     default trait foo = Ord;
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:54:5
   |
LL |     default trait foo = Ord;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:56:5
   |
LL |     default impl foo {}
   |     ^^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:60:5
   |
LL |     default default!();
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:61:5
   |
LL |     default default::foo::bar!();
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:62:5
   |
LL |     default macro foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:62:5
   |
LL |     default macro foo {}
   |     ^^^^^^^^^^^^^^^^^

error: item cannot be `default`
  --> $DIR/default-on-wrong-item-kind.rs:64:5
   |
LL |     default macro_rules! foo {}
   |     ^^^^^^^ `default` because of this
   |
   = note: only associated `fn`, `const`, and `type` items can be `default`

error: item kind not supported in `extern` block
  --> $DIR/default-on-wrong-item-kind.rs:64:5
   |
LL |     default macro_rules! foo {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:70:5
   |
LL |     default extern crate foo;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:72:5
   |
LL |     default use foo;
   |     ^^^^^^^^^^^^^^^^

error: associated `static` items are not allowed
  --> $DIR/default-on-wrong-item-kind.rs:74:5
   |
LL |     default static foo: u8;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:78:5
   |
LL |     default mod foo {}
   |     ^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:80:5
   |
LL |     default extern "C" {}
   |     ^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:83:5
   |
LL |     default enum foo {}
   |     ^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:85:5
   |
LL |     default struct foo {}
   |     ^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:87:5
   |
LL |     default union foo {}
   |     ^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:89:5
   |
LL |     default trait foo {}
   |     ^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:91:5
   |
LL |     default trait foo = Ord;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:93:5
   |
LL |     default impl foo {}
   |     ^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:99:5
   |
LL |     default macro foo {}
   |     ^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:101:5
   |
LL |     default macro_rules! foo {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:107:5
   |
LL |     default extern crate foo;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:109:5
   |
LL |     default use foo;
   |     ^^^^^^^^^^^^^^^^

error: associated `static` items are not allowed
  --> $DIR/default-on-wrong-item-kind.rs:111:5
   |
LL |     default static foo: u8;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:115:5
   |
LL |     default mod foo {}
   |     ^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:117:5
   |
LL |     default extern "C" {}
   |     ^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:120:5
   |
LL |     default enum foo {}
   |     ^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:122:5
   |
LL |     default struct foo {}
   |     ^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:124:5
   |
LL |     default union foo {}
   |     ^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:126:5
   |
LL |     default trait foo {}
   |     ^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:128:5
   |
LL |     default trait foo = Ord;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:130:5
   |
LL |     default impl foo {}
   |     ^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:136:5
   |
LL |     default macro foo {}
   |     ^^^^^^^^^^^^^^^^^

error: item kind not supported in `trait` or `impl`
  --> $DIR/default-on-wrong-item-kind.rs:138:5
   |
LL |     default macro_rules! foo {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 73 previous errors

